openmediavault (6.5.0-1) stable; urgency=low

  * Improve Debian security repository cleanup.
  * Issue #1564: Add alternative MAC address support for wired,
    wireless and VLAN network interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Jul 2023 13:14:36 +0200

openmediavault (6.4.9-1) stable; urgency=low

  * Improve `omv-btrfs-dfree` command which is used by Samba on
    Btrfs file systems. Use the free space determined via statfs
    and df instead of the estimated value which was causing
    problems on several systems.
  * Get PCI vendor/subsystem ID of NVMe devices via sysfs.
  * Add the `OMV_NFSD_OPTS` environment variable to add custom
    arguments for rpc.nfsd. This can be used to specify the
    supported versions of NFS for example. Please check the
    rpc.nfsd man page for more information.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 08 Jul 2023 12:05:13 +0200

openmediavault (6.4.8-1) stable; urgency=low

  * Ensure the .snapshot directory exists when creating a scheduled
    snapshot of a shared folder.
  * Disable SSH socket activation which is activated by default on
    several Debian derivatives.
  * Add option `--append-dirty` to `omv-salt deploy run` to append
    states that are marked as dirty.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 04 Jul 2023 08:07:18 +0200

openmediavault (6.4.7-1) stable; urgency=low

  * Update locale files.
  * Ensure systemd-networkd and systemd-resolved services are unmasked
    and enabled.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Jun 2023 20:20:55 +0200

openmediavault (6.4.6-1) stable; urgency=low

  * Various improvements in UI.
  * Improve `omv-btrfs-dfree` to display correct free space on
    Windows.
  * Add `OMV_POSTFIX_MASTER_SMTPD_ENABLED` environment variable to
    enable/disable smtpd in Postfix. Defaults to `yes`.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Jun 2023 18:45:01 +0200
